--- a/src/output.css
+++ b/src/output.css
@@ -543,12 +543,28 @@ video {
   position: relative;
 }
 
-.m-auto {
-  margin: auto;
+.bottom-1 {
+  bottom: 0.25rem;
 }
 
-.m-3 {
-  margin: 0.75rem;
+.right-1 {
+  right: 0.25rem;
+}
+
+.bottom-10 {
+  bottom: 2.5rem;
+}
+
+.right-10 {
+  right: 2.5rem;
+}
+
+.bottom-16 {
+  bottom: 4rem;
+}
+
+.right-16 {
+  right: 4rem;
 }
 
 .m-1 {
@@ -559,8 +575,12 @@ video {
   margin: 0.375rem;
 }
 
-.m-5 {
-  margin: 1.25rem;
+.m-3 {
+  margin: 0.75rem;
+}
+
+.m-auto {
+  margin: auto;
 }
 
 .block {
@@ -575,28 +595,20 @@ video {
   display: flex;
 }
 
+.h-16 {
+  height: 4rem;
+}
+
+.h-screen {
+  height: 100vh;
+}
+
 .w-1\/2 {
   width: 50%;
 }
 
-.w-auto {
-  width: auto;
-}
-
-.w-1\/4 {
-  width: 25%;
-}
-
-.w-1 {
-  width: 0.25rem;
-}
-
-.flex-row {
-  flex-direction: row;
-}
-
-.flex-col {
-  flex-direction: column;
+.w-16 {
+  width: 4rem;
 }
 
 .content-center {
@@ -611,24 +623,8 @@ video {
   justify-content: center;
 }
 
-.justify-items-center {
-  justify-items: center;
-}
-
 .self-center {
   align-self: center;
-}
-
-.border-2 {
-  border-width: 2px;
-}
-
-.border-solid {
-  border-style: solid;
-}
-
-.p-1 {
-  padding: 0.25rem;
 }
 
 .p-3 {
@@ -665,9 +661,4 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
-
-.required\:border-red-500:required {
-  --tw-border-opacity: 1;
-  border-color: rgb(239 68 68 / var(--tw-border-opacity));
 }
